--- a/portfolio.html
+++ b/portfolio.html
@@ -29,25 +29,28 @@
                         <ul> <a href="index.html">About</a></ul>
                         <ul> <a href="portfolio.html">Portfolio</a></ul>
                         <ul> <a href="contact.html">Contact</a></ul>
+                        <ul> <a href="https://www.linkedin.com/in/chasevernon/">LinkedIn</a></ul>
+                        <ul> <a href="https://github.com/csvernon">Github</a></ul>
+        
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-lg-8" id="sidebar">
                     <h2>Portfolio</h2>
                 <hr>
-                <a href="https://csvernon.github.io/DateNight/" class="portfolio DateNight">
+                <a target="_blank" href="https://csvernon.github.io/DateNight/" class="portfolio DateNight">
                     <div class="color banner">Date Night</div>
                 </a>
-                <a href="https://csvernon.github.io/Word-Guess-Game/" class="portfolio hangman">
+                <a target="_blank" href="https://csvernon.github.io/Word-Guess-Game/" class="portfolio hangman">
                     <div class="color banner">Hangman</div>
                 </a>
-                <a href="https://csvernon.github.io/RPS-Multiplayer/" class="portfolio rock-paper-scissors">
+                <a target="_blank" href="https://csvernon.github.io/RPS-Multiplayer/" class="portfolio rock-paper-scissors">
                     <div class="color banner">Rock Paper Scissors</div>
                 </a>
-                <a href="https://csvernon.github.io/unit-4-game/" class="portfolio rpg-game">
+                <a target="_blank" href="https://csvernon.github.io/unit-4-game/" class="portfolio rpg-game">
                     <div class="color banner">Crystal Collector</div>
                 </a>
-                <a href="https://csvernon.github.io/TriviaGame/" class="portfolio trivia-game">
+                <a target="_blank" href="https://csvernon.github.io/TriviaGame/" class="portfolio trivia-game">
                     <div class="color banner">Trivia Game</div>
                 </a>
 
