--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,9 @@
                         <ul> <a href="index.html">About</a></ul>
                         <ul> <a href="portfolio.html">Portfolio</a></ul>
                         <ul> <a href="contact.html">Contact</a></ul>
+                        <ul> <a target="_blank" href="https://www.linkedin.com/in/chasevernon/">LinkedIn</a></ul>
+                        <ul> <a target="_blank" href="https://github.com/csvernon">Github</a></ul>
+        
                     </div>
                 </div>
             </div>
