--- a/index.html
+++ b/index.html
@@ -29,16 +29,26 @@
                         <ul> <a href="index.html">About</a></ul>
                         <ul> <a href="portfolio.html">Portfolio</a></ul>
                         <ul> <a href="contact.html">Contact</a></ul>
+                        <ul> <a href="https://www.linkedin.com/in/chasevernon/">LinkedIn</a></ul>
+                        <ul> <a href="https://github.com/csvernon">Github</a></ul>
+        
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-lg-8" id="sidebar">
-                    <h2>About</h2>
+                <h2>About</h2>
                 <hr>
-                <p>From a young age I have been obsessed with technology, this passion lead me through college and into the professional workplace where I focused on Information Technology.  After nearly two years working as an IT Specialist,  my creative drive brought me to the UNC Coding Bootcamp where I studied to be a Full-Stack Developer.  I have experience using technology to solve problems efficiently and automating processes to make sure they execute flawlessly.  It is my personal goal to make a positive impact wherever I go, in my personal life and in the workplace.  </p>
-                <p>https://www.linkedin.com/in/chasevernon/</p>
-                <p>https://github.com/csvernon</p>
+                <p>From a young age I have been obsessed with technology, this passion lead me through college and into
+                    the professional workplace where I focused on Information Technology. After nearly two years working
+                    as an IT Specialist, my creative drive brought me to the UNC Coding Bootcamp where I studied to be a
+                    Full-Stack Developer. I have experience using technology to solve problems efficiently and
+                    automating processes to make sure they execute flawlessly. It is my personal goal to make a positive
+                    impact wherever I go, in my personal life and in the workplace. </p>
 
+                <div class="container">
+                    <iframe src="https://drive.google.com/file/d/123tVUv9WDjkjX86gcG8kOnTfcU-owHec/preview" width="800" height="600"></iframe>
+                </div>
+                <a href="https://drive.google.com/uc?export=download&id=123tVUv9WDjkjX86gcG8kOnTfcU-owHec" target="_blank">Download</a>
             </div>
         </div>
     </container>
