added firebase to store messages

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Chase S Vernon</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="assets/images/headshot.jpg" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="icon" type="image/png" href="assets/images/headshot.jpg" />
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 
 <body class="content">
@@ -52,6 +54,8 @@
             </div>
         </div>
     </container>
+    <script src="./assets/main.js"></script>
+
 </body>
 
 </html>
