--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,11 @@
     <title>Chase S Vernon</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="assets/images/headshot.jpg" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="icon" type="image/png" href="assets/images/headshot.jpg" />
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 
 <body class="content">
@@ -20,7 +22,7 @@
                     <hr>
                     <img src="assets/images/headshotCircle.gif" height="220" width="220" alt="Bio Pic">
                     <h1 id="name">
-                        Chase S. Vernon
+                        Chase Vernon
                     </h1>
                 </div>
                 <div class="row">
@@ -39,13 +41,15 @@
                     <h2>Contact</h2>
                 <hr>
                 <form data-toggle="validator">
-                    Name<input type="text" placeholder="John Smith" pattern="[A-Z]+[A-Za-z]* [A-Z]+[A-Za-z]*" required>
-                    Email<input type="email" placeholder="example@email.com"
+                    Name<input id="nameInput" type="text" placeholder="John Smith" pattern="[A-Z]+[A-Za-z]* [A-Z]+[A-Za-z]*" required>
+                    Email<input id="emailInput" type="email" placeholder="example@email.com"
                         pattern="[A-Za-z0-9.]+@[A-Za-z0-9]+.[A-Za-z0-9]+" required>
-                    Message<textarea maxlength="1000"></textarea>
-                    <button action="#" class="color" required>Submit</button>
+                    Message<textarea id="messageInput" maxlength="1000"></textarea>
+                    <button id="submitButton" action="#" class="color" required>Submit</button>
                 </form>
             </div>
+            <script src="./assets/main.js"></script>
+
 </body>
 
 </html>
