--- a/portfolio.html
+++ b/portfolio.html
@@ -49,8 +49,8 @@
                 <a target="_blank" href="https://csvernon.github.io/RPS-Multiplayer/" class="portfolio rock-paper-scissors">
                     <div class="color banner">Rock Paper Scissors</div>
                 </a>
-                <a target="_blank" href="https://csvernon.github.io/unit-4-game/" class="portfolio rpg-game">
-                    <div class="color banner">Crystal Collector</div>
+                <a target="_blank" href="https://see-the-stars.herokuapp.com/#" class="portfolio rpg-game">
+                    <div class="color banner">See The Stars</div>
                 </a>
                 <a target="_blank" href="https://csvernon.github.io/TriviaGame/" class="portfolio trivia-game">
                     <div class="color banner">Trivia Game</div>
