change css names

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                 <a target="_blank" href="https://csvernon.github.io/RPS-Multiplayer/" class="portfolio rock-paper-scissors">
                     <div class="color banner">Rock Paper Scissors</div>
                 </a>
-                <a target="_blank" href="https://see-the-stars.herokuapp.com/#" class="portfolio rpg-game">
+                <a target="_blank" href="https://see-the-stars.herokuapp.com/#" class="portfolio Project2">
                     <div class="color banner">See The Stars</div>
                 </a>
                 <a target="_blank" href="https://csvernon.github.io/TriviaGame/" class="portfolio trivia-game">
