reduce entire portfolio to one page

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-lg-8">
+            <div id="page" class="col-xs-12 col-sm-6 col-lg-8">
                     <h2>Contact</h2>
                 <hr>
                 <form data-toggle="validator">
