--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-lg-8" id="sidebar">
+            <div id="page" class="col-xs-12 col-sm-6 col-lg-8" id="sidebar">
                     <h2>Portfolio</h2>
                 <hr>
                 <a target="_blank" href="https://csvernon.github.io/DateNight/" class="portfolio DateNight">
