--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="row">
 
                     <div class="link-container">
-                        <ul> <a href="#" onclick="return false;" id="indexBtn">About</a></ul>
+                        <ul id="ULabout"> <a href="#" onclick="return false;" id="indexBtn">About</a></ul>
                         <ul> <a href="#" onclick="return false;" id="portfolioBtn" >Portfolio</a></ul>
                         <ul> <a href="#" onclick="return false;" id="contactBtn" >Contact</a></ul>
                         <ul> <a href="https://www.linkedin.com/in/chasevernon/">LinkedIn</a></ul>
