--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="col-xs-12 col-sm-12 col-lg-3" id="sidebar">
                 <div class="row">
                     <hr>
-                    <img src="assets/images/headshotCircle.gif" height="220" width="220" alt="Bio Pic">
+                    <img src="assets/images/Xmascircle.png" height="220" width="220" alt="Bio Pic">
                     <h1 id="name">
                         Chase Vernon
                     </h1>
