--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
                     <div class="link-container">
                         <ul id="ULabout"> <a href="#" onclick="return false;" id="indexBtn">About</a></ul>
-                        <ul> <a href="#" onclick="return false;" id="portfolioBtn" >Portfolio</a></ul>
-                        <ul> <a href="#" onclick="return false;" id="contactBtn" >Contact</a></ul>
+                        <ul> <a href="#" onclick="return false;" id="portfolioBtn" >Portfolio</a></ul>                        
+                        <!-- <ul> <a href="#" onclick="return false;" id="contactBtn" >Contact</a></ul> -->
                         <ul> <a href="https://www.linkedin.com/in/chasevernon/" target="_blank">LinkedIn</a></ul>
                         <ul> <a href="https://github.com/csvernon" target="_blank">Github</a></ul>
         
